Revision history for Perl extension ExtUtils::Depends.

0.--- Mon Apr  4 22:49:35 EDT 2005
	- Correct a typo in the synopsis.
	- In get_makefile_vars, comment out the code that put the installed
	  libraries into @OBJECT, which caused them to get deleted on
	  realclean.

0.205 Sun Jan 23 13:20:14 EST 2005
	- Disable the RPM-related postamble on Win32.  The 'date' command
	  on windows is interactive, and caused Makefile.PL to hang.

0.204 Sun Sep 19 23:26:23 CEST 2004
	- Use capitals at the start of everything that is printed out, to unify
	  Makefile.PL output.

0.203 Fri Mar 12 16:09:35 EST 2004
	- don't output a PM pair from get_makefile_vars unless we actually
	  have data in the pm key.

0.202 Fri Mar  5 00:26:18 EST 2004
	- add long-overdue version-checking import implementation.
	- fixed a bad initial value bug that caused crashes if your setup
	  did not need a call to set_libs.  [Ross]
	- distribute the spec file.  [Ross]

0.201 Thu Feb 12 15:33:47 EST 2004
	- add_headers() is now deprecated.  it's functionality is provided
	  by install(), and it is already a no-op in 0.200.
	- remove code referring to @headers, since we don't actually keep a
	  separate list of headers anymore.  (should we?)
	- load() no longer returns the "header" key -- it should've been
	  "headers", but i've simply removed all that code.

0.200 Tue Feb 10 01:21:57 EST 2004
	- completely rewritten.  attempted to retain backward compatibility,
	  but some esoteric functionality is probably missing.  now stores
	  dependency lists, so that module chaining is more useful.
	- document just about everything.
	- really, really, really needs a regression test suite.

0.104 Fri Nov 21 01:34:57 EST 2003
	- remove debian packaging files
	- add licensing terms to pod.  Depends was originally part of
	  gtk-perl, which itself bore this copyright notice.

0.103 Fri Aug 15 09:59:42 EDT 2003
	- add files for maintaining debian packages.

0.102 Tue Jul  8 14:10:29 EDT 2003